--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">笔记App</string>
+    <string name="app_name">A Galaxy</string>
 
 
     <string name="main">主页</string>
