--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="refresh_error">刷新失败</string>
     <string name="load_success">加载成功</string>
     <string name="load_error">加载失败</string>
+    <string name="confirm">确认</string>
+    <string name="cancel">取消</string>
 </resources>
