--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="load_error">加载失败</string>
     <string name="confirm">确认</string>
     <string name="cancel">取消</string>
+
+    <string name="classic_designer">com.example.myapplication.base.component.swipe.SwipeLayout$ClassicDesigner</string>
+    <string name="overlay_designer">com.example.myapplication.base.component.swipe.SwipeLayout$OverlayDesigner</string>
+    <string name="parallax_designer">com.example.myapplication.base.component.swipe.SwipeLayout$ParallaxDesigner</string>
 </resources>
